# arca-python-sdk

./: .gitignore  .replit  LICENSE  PUBLISHING.md  QUERY_FILTER_FIX.md  README.md  demo.py  pyproject.toml  replit.md  requirements.txt  setup.py  test_update.py
arca/: __init__.py  client.py  exceptions.py  models.py
attached_assets/: PYTHON_SDK_IMPLEMENTATION_1763779382978.md
examples/: alter_schema_example.py  table_examples.py  vector_examples.py
tests/: test_error_handling.py
